--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <ul class="nav nav-tabs">
-        <li><%= link_to "Home", welcome_index_path %></li>
+        <li><%= link_to "Blocipedia", welcome_index_path %></li>
         <li><%= link_to "About", welcome_about_path %></li>
       </ul>
       <div class="pull-right login">
