--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,6 @@
 
   <body>
     <div class="container">
-      <ul class="nav nav-tabs">
-        <li><%= link_to "Blocipedia", root_path %></li>
-        <li><%= link_to "About", about_path %></li>
-      </ul>
       <div class="pull-right login">
         <% if user_signed_in? %>
            Signed in as: <strong><%= current_user.email %></strong> |
@@ -25,8 +21,22 @@
            <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
         <% end %>
       </div>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <ul class="nav nav-tabs">
+        <li><%= link_to "Blocipedia", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
+        <li> <%= link_to "Wikis", wikis_path %>
+      </ul>
+      <% if flash[:notice] %>
+         <div class="alert alert-success">
+           <button type="button" class="close" data-dismiss="alert">&times;</button>
+           <%= flash[:notice] %>
+         </div>
+       <% elsif flash[:alert] %>
+         <div class="alert alert-warning">
+           <button type="button" class="close" data-dismiss="alert">&times;</button>
+           <%= flash[:alert] %>
+         </div>
+       <% end %>
       <%= yield %>
     </div>
   </body>
