--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -6,7 +6,7 @@
     <p>Create private wikis for $15 per month only</p>
     <script class='stripe-button' src="https://checkout.stripe.com/checkout.js" data-key="<%= @stripe_btn_data[:key] %>" data-amount="<%= @stripe_btn_data[:amount] %>" data-description="<%= @stripe_btn_data[:description] %>" ></script>
   <% elsif current_user.role === 'premium' %>
-    <%= link_to "Downgrade account", charges_downgrade_path, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to downgrade to standard account? Your private wikis will become visible to public.'} %>
+    <%= link_to "Downgrade account", downgrade_path, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to downgrade to standard account? Your private wikis will become visible to public.'} %>
   <% end %>
 
 <% end %>
