Working on private wikis

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,4 +1,9 @@
-<h1><%= @wiki.title %></h1>
+<div>
+  <h1><%= @wiki.title %></h1>
+    <% if @wiki.private == true %>
+      <p>Private</p>
+    <% end %>
+</div>
 
 <div class="row">
   <div class="col-md-8">
