--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,11 +44,11 @@
       <p>Create private wikis for $15 only. <%= link_to  "Upgrade to Premium", charges_new_path, data: { confirm: "You will be able to create private wikis for a monthly fee of $15." }  %></p>
     <% elsif current_user.premium? %>
       <h3>Downgrade to standard</h3>
-      <p>Your private wikis will become public.  <%= link_to "Downgrade to standard", downgrade_path, data: { confirm: "Are you sure? Your private wikis will become public." } %></p>
+      <p>Your private wikis will become public.  <%= link_to "Downgrade to Standard", downgrade_path, data: { confirm: "Are you sure? Your private wikis will become public." } %></p>
     <% end %>
     <br>
     <h3>Cancel my account</h3>
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+    <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
     <%= link_to "Back", :back %>
   </div>
 </div>
