Working on private wikis

--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,4 +1,11 @@
-<h1>All Wikis</h1>
+<div>
+  <% if @wikis.private == true %>
+    <h1>Private Wikis</h1>
+  <% else %>
+    <h1>All Wikis</h1>
+  <% end %>
+</div>
+
 <div class="col-md-8">
 <% @wikis.each do |wiki| %>
   <div class="media">
