--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,9 @@
 <div class="jumbotron">
   <h1>Blocipedia: Social, Markdown Wikis</h1>
   <p>Create and share Markdown Wikis</p>
+  <p>
+    <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+  </p>
 </div>
 <div class="row">
    <div class="col-md-4">
@@ -11,7 +14,7 @@
      <h2>Eliminates poverty</h2>
      <p>Blocipedia will deliver money and education to those in need, all over the world.</p>
    </div>
-   <div class="col-md-4">
+   <div class="col-md-4">a
      <h2>Makes you better looking</h2>
      <p>Blocipedia will make you better looking: it's scientifically proven to make men look like Ryan Gosling and women look like Shakira.</p>
    </div>
