--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,12 +1,22 @@
 <%= form_for @wiki do |f| %>
-  <div class="form-group">
-    <%= f.label :title %>
+  <% if wiki.errors.any? %>    <%= f.label :title %>
+    <div class="alert alert-danger">
+      <h4><%= pluralize(wiki.errors.count, "error") %>.</h4>
+      <ul>
+       <% wiki.errors.full_messages.each do |msg| %>
+         <li><%= msg %></li>
+       <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <%= form_group_tag(wiki.errors[:title]) do %>
     <%= f.text_field :title, class: 'form-control', placeholder: "Enter wiki title" %>
-  </div>
-  <div class="form-group">
+  <% end %>
+  <%= form_group_tag(wiki.errors[:body]) do %>
     <%= f.label :body %>
     <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
-  </div>
+  <% end %>
 
   <% if current_user.admin? || current_user.premium? %>
     <div class="form-group">
