--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @wiki.title %>
+<h1><%= markdown(@wiki.title) %>
   <small>
      submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user.email %>
    </small>
@@ -6,7 +6,7 @@
 
 <div class="row">
   <div class="col-md-8">
-    <p><%= @wiki.body %></p>
+    <p><%= markdown(@wiki.body) %></p>
   </div>
   <% if user_is_authorized_for_wiki?(@wiki) %>
     <div class="col-md-4">
