--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -18,11 +18,10 @@
     <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
   <% end %>
 
-  <% if current_user.admin? || current_user.premium? %>
+  <% if current_user.admin? || current_user.premium?  %>
     <div class="form-group">
       <%= f.label :private, class: 'checkbox' do %>
-      <%= f.check_box :private %>
-      Private wiki
+      <%= f.check_box :private %> Private wiki
       <% end %>
     </div>
   <% end %>
@@ -30,4 +29,8 @@
   <div class="form-group">
     <%= f.submit "Save", class: 'btn btn-success' %>
   </div>
+<% end %>
+<br>
+<% if @wiki.private && current_user.admin? || current_user.id == @wiki.user_id %>
+  <%= link_to "Manage Collaborators", class: "btn btn-info" %>
 <% end %>
