--- a/app/views/collaborators/_form.html.erb
+++ b/app/views/collaborators/_form.html.erb
@@ -1,7 +1,16 @@
-<% if @wiki.private? && policy(@wiki).destroy?  %>
-   <%= form_for [wiki, Collaborator.new] do |f| %>
-     <%= f.label :user %>
-     <%= f.text_field :user, placeholder: "User's Email" %>
-      <%= f.submit "Save", class: 'btn btn-success' %>
+<% if current_user.premium? || current_user.admin? %>
+  <h3>Add Collaborators</h3>
+
+  <%= form_for [wiki , Collaborator.new] do |c| %>
+    <%= email_field_tag :collaborator, nil,  placeholder: "Enter an email address" %>
+    <%= c.submit "Add a collaborator", class: 'btn btn-primary' %>
+  <% end %>
+
+  <h3>Delete Collaborators</h3>
+
+  <% wiki.collaborators.each do |c| %>
+    <% user = User.find(c.user_id) %>
+    <%= user.email %>
+    <%= link_to "Delete", wiki_collaborator_path(@wiki, c), class: 'btn btn-danger', method: :delete%>
   <% end %>
 <% end %>
