--- a/app/views/collaborators/_form.html.erb
+++ b/app/views/collaborators/_form.html.erb
@@ -3,7 +3,7 @@
 
   <%= form_for [wiki , Collaborator.new] do |c| %>
     <%= email_field_tag :collaborator, nil,  placeholder: "Enter an email address" %>
-    <%= c.submit "Add a collaborator", class: 'btn btn-primary' %>
+    <%= c.submit "Add a collabor", class: 'btn btn-primary' %>
   <% end %>
 
   <h3>Delete Collaborators</h3>
@@ -11,6 +11,6 @@
   <% wiki.collaborators.each do |c| %>
     <% user = User.find(c.user_id) %>
     <%= user.email %>
-    <%= link_to "Delete", wiki_collaborator_path(@wiki, c), class: 'btn btn-danger', method: :delete%>
+    <%= link_to "Delete a collaborator", wiki_collaborator_path(@wiki, c), class: 'btn btn-danger', method: :delete%>
   <% end %>
 <% end %>
